feat: support index
